# codReviewPandas

./: dados_finais_tjro.csv  index.ipynb  prova_discursiva_compilado.csv  prova_objetiva_compilado.csv  pyproject.toml
